# python-portfolio-projects

./: .gitignore  README.md  pyproject.toml
personal-finance-analyzer/: .gitignore  README.md  finance_config.json  pyproject.toml
personal-finance-analyzer/examples/: bank_sample.csv
personal-finance-analyzer/src/finance_analyzer/: __init__.py  analytics.py  budget.py  categorization.py  charts.py  cli.py  config.py  csvio.py  models.py
personal-finance-analyzer/tests/: test_categorization.py  test_csvio.py  test_pipeline.py
src/jobtracker/: __init__.py  analytics.py  cli.py  db.py  models.py  repository.py
tests/: test_analytics.py  test_repository.py
